# flame

./: .gitignore  README.md  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js
.github/workflows/: python-package.yml  sphinx-make-html.yml
_sources/: index.rst.txt
_sources/autoapi/: index.rst.txt
autoapi/: index.html
autoapi/flame/: index.html
design_notes/: config.md  notes.md
docs/source/: conf.py
example/mnist/: classification_engine.py  config.py  dataset.py  main.py  main_v2.py  main_v3.py  model.py  presets.py  pytorch_example.jsonnet  pytorch_example_v2.jsonnet  pytorch_example_v3.jsonnet
flame/: __init__.py  __main__.py  archiver.py  argument.py  arguments.py  auto_builder.py  ckcfg.py  config.py  config_parser.py  distributed_training.py  logging.py  registry.py  state.py  testing.py  zip_importer.py
flame/core/: archiver.py  arguments.py  config.py  config_parser.py  distributed_launcher.py  jsonnet.py  logging.py  testing.py  timing.py
flame/helpers/: __init__.py  amp.py  checkpoint_saver.py  cuda.py  data.py  model.py  optimizer.py  scheduler.py  tensorboard.py
flame/next/: config.py
flame/next_version/: arguments.py  config.py  config_parser.py  distributed_training.py  engine.py  inspect.py  state.py  symbols.py
flame/oneflow/: arguments.py  dist_run.py  launcher.py  sampler.py  typing_prelude.py
flame/pytorch/: arguments.py  container.py  data_loader_factory.py  distributed.py  distributed_training.py  engine.py  helpers.py  launcher.py  preparation.py  process.py  sampler.py  typing_prelude.py
flame/utils/: __init__.py  distributed.py  experiment.py  inspector.py  jsonnet.py  main_fn.py  operating_system.py  rich_formatter.py
jsonnet/: flame.libsonnet  test.jsonnet
resources/config_lib/: nn.libsonnet  optimizers.libsonnet  transforms.libsonnet
scripts/: install_pytorch_cpu.sh
tests/: test_arugment.py  test_auto_builder.py  test_config.py  test_flame.py  test_jsonnet.py  test_registry.py
(+444 files in other folders)
