[project]
name = "flame"
version = "0.1.1"
description = ""
authors = [
    {name = "SunDoge", email = "384813529@qq.com"},
]
dependencies = [
    "tqdm>=4.64.1",
    "typed-args>=0.5.2",
    "rjsonnet>=0.4.4",
]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "GPL-3.0"}
[project.optional-dependencies]

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

[tool]
[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "torch>=1.12.1",
    "pytest>=7.1.3",
    "ipdb>=0.13.9",
    "icecream>=2.1.3",
    "Sphinx>=5.1.1",
    "sphinx-autoapi>=1.9.0",
    "pydata-sphinx-theme>=0.10.1",
    "tensorboard>=2.10.0",
]
