[tool.poetry]
name = "flame"
version = "0.1.1"
description = ""
authors = ["SunDoge <384813529@qq.com>"]

[tool.poetry.dependencies]
python = "^3.7"
rich = ">=12,<14"
tqdm = "^4.60.0"
typed-args = "^0.5.1"
rjsonnet = "^0.4.4"
tensorboard = "^2.8.0"

[tool.poetry.dev-dependencies]
torch = "^1.11.0"
pytest = "^7.1.1"
autopep8 = "^1.6.0"
ipdb = "^0.13.9"
Sphinx = "^5.0.2"
sphinx-autoapi = "^1.8.4"
pydata-sphinx-theme = "^0.9.0"
icecream = "^2.1.2"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.pytest.ini_options]
testpaths = [
  "tests",
  # "integration",
]
